--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,3 +12,6 @@ logging.level.org.hibernate.SQL=debug
 spring.profiles.active=testo
 
 mi.valor=Leido del application.properties
+
+rango.min=1
+rango.max=10
