--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -17,3 +17,11 @@ rango.min=1
 rango.max=10
 
 spring.data.rest.basePath=/auto
+
+springdoc.swagger-ui.use-root-path=true
+springdoc.show-actuator=true
+springdoc.swagger-ui.path=/open-api
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.docExpansion=none
+
